# nanoCSE

./: .gitignore  .pre-commit-config.yaml  README.md  README_AIME.md  parquet_to_jsonl.py  pyproject.toml  run.sh  run_evolve_batch.sh  run_filter_pipeline.sh  run_full_pipeline_jsonl.sh  stat_passk_cse.py  test_api.py
SE_Perf/: README.md  iteration_executor.py  perf_config.py  perf_run.py  results_io.py  run_helpers.py  run_models.py  trajectory_handler.py
SE_Perf/core/: __init__.py
SE_Perf/core/global_memory/: __init__.py  bank.py
SE_Perf/core/utils/: __init__.py  generate_tra_files.py  global_memory_manager.py  instance_data_manager.py  llm_client.py  local_memory_manager.py  problem_manager.py  se_logger.py  traj_extractor.py  traj_pool_manager.py  traj_summarizer.py  trajectory_processor.py
SE_Perf/operators/: __init__.py  alternative_strategy.py  base.py  crossover.py  filter.py  plan.py  reflection_refine.py  registry.py  traj_pool_summary.py  trajectory_analyzer.py
SE_Perf/test/: alternative_strategy.py  api_test.py  api_test_litellm.py  comprehensive_analysis_old.py  converter_old.py  fix_existing_traj_pool.py  run_operator_tests.py  swe_iterator_backup.py  test_alternative_strategy.py  test_global_memory.py  test_instance_data_system.py  test_litellm_simple.py  test_operator_data_access.py  test_operator_weighted_selection.py  test_operators.py  test_problem_interface.py  test_traj_extractor.py  test_traj_pool.py  test_traj_pool_summary.py  test_unified_data_interface.py
SE_Perf/test/counter_generation/: add_problem.py  claude.py  conclude_patch.py  filter_predictions.py  fix_claude_analysis.py  read_predictions.py  test_claude_api.py  test_conclude_patch.py  test_json_extract.py
configs/: Plan-Weighted-Local-Global-30.yaml  aime_evolve.yaml  livecodebench.yaml
configs/perf_configs/: config_aime_evolve.yaml  config_integral.yaml  config_livecodebench.yaml
instances/: 1873_A.json  aizu_1444_yokohama-phenomena.json
perfagent/: README.md  __init__.py  agent.py  config.py  config_example.yaml  config_example_original.yaml  diff_applier.py  llm_client.py  protocols.py  pytest.ini  run.py  task_runner.py  trajectory.py
perfagent/effibench/: __init__.py  analysis.py  benchmark.py  run_tests.py  utils.py
perfagent/lcb_eval/: __init__.py  testing_util.py
perfagent/tasks/: __init__.py  aime.py  effibench.py  livecodebench.py
perfagent/tests/: README.md  conftest.py  test_agent.py  test_config.py  test_diff_applier.py  test_integration.py  test_run_refactored.py  test_trajectory.py
perfagent/utils/: json_utils.py  log.py
tests/: test_protocols.py
utils/: analyze_iterations.py  build_passed_dataset.py  check_processes.py  cleanup_abnormal_tasks.py  collect_task_history.py  convert_aime_parquet.py  count_task_success.py  dir_to_jsonl.py  exp_stats.py  extract_best_solutions.py  extract_best_solutions_unified.py  filter_aime.py  filter_scored_instances.py  generate_task_order.py  import_local_experience_to_chroma.py  inspect_chromadb.py  plot_best_runtime_png.py
viz_tool/: app.py
viz_tool/templates/: index.html
(+8 files in other folders)
